tests/syntactic/sourceloc3/sourceloc3.err
Error: syntax error, unexpected $, expecting identifier in file sourceloc3.dl at line 1
.type    $BAD
---------^----
1 errors generated, evaluation aborted
